<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registOrLoginVM" type="com.toylysapplication.app.modules.registorlogin.data.viewmodel.RegistOrLoginVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRegistorLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegreen_A400">
        <ImageView android:id="@+id/imageXMLID1378"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_66pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_180pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_xmlid1378"
            tools:ignore="ContentDescription" tools:src="@drawable/img_xmlid1378"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFullName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registOrLoginVM.registOrLoginModel.txtFullName}"
            style="@style/txtRobotoregular12" tools:text="@string/lbl_full_name"/>
        <View android:background="@color/white_A700"
            android:id="@+id/lineVectorOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_35pxv" android:layout_width="@dimen/_354pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnphonenumber"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPhoneNumber"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registOrLoginVM.registOrLoginModel.txtPhoneNumber}"
                style="@style/txtRobotoregular12" tools:text="@string/lbl_phone_number"/>
            <LinearLayout android:id="@+id/linearRowgrouptwentyone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <EditText android:drawablePadding="@dimen/_7pxh"
                    android:drawableStart="@drawable/img_arrowdown"
                    android:ellipsize="end"
                    android:hint="@string/lbl_id_62"
                    android:id="@+id/etGroupTwentyOne"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingStart="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@={registOrLoginVM.registOrLoginModel.etGroupTwentyOneValue}"
                    android:textColorHint="@color/white_A700"
                    style="@style/etPoppinsmedium14" tools:ignore="Autofill"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_enter_phone_num"
                    android:id="@+id/etGroupNineteen"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_43pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.8"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:singleLine="true"
                    android:text="@={registOrLoginVM.registOrLoginModel.etGroupNineteenValue}"
                    android:textColorHint="@color/white_A700_7f"
                    style="@style/etPoppinsmedium14_1" tools:ignore="Autofill"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registOrLoginVM.registOrLoginModel.txtPassword}"
            style="@style/txtRobotoregular12" tools:text="@string/lbl_password"/>
        <EditText android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_enter_new_passw"
            android:id="@+id/etGroupSeventeen"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_1pxh" android:singleLine="true"
            android:text="@={registOrLoginVM.registOrLoginModel.etGroupSeventeenValue}"
            android:textColorHint="@color/white_A700_7f"
            style="@style/etPoppinsmedium14_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_continue"/>
    </LinearLayout>
</layout>
