<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="transactionVM" type="com.toylysapplication.app.modules.transaction.data.viewmodel.TransactionVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearTransaction"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearBack"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_11pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTransactionDet"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_weight="0.93"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{transactionVM.transactionModel.txtTransactionDet}"
                    style="@style/txtPoppinsbold18" tools:text="@string/msg_transaction_det"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearMc"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txt17Agustus2022"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_23pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{transactionVM.transactionModel.txt17Agustus2022}"
                style="@style/txtPoppinsbold14" tools:text="@string/lbl_17_agustus_2022"/>
            <FrameLayout android:id="@+id/frameStackrectanglefiftysix"
                android:layout_height="@dimen/_50pxv"
                android:layout_marginStart="@dimen/_196pxh"
                android:layout_width="@dimen/_50pxh" style="@style/groupStylebluegray_50cornerRadius">
                <ImageView android:id="@+id/imageRectangleFiftySix"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_35pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_10pxh}"
                    imageRes="@{@drawable/img_rectangle58}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle58"/>
            </FrameLayout>
        </LinearLayout>
        <View android:background="@color/black_900_4c"
            android:id="@+id/lineVectorEight"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_354pxh"/>
        <LinearLayout android:id="@+id/linearRowmotorhondadel"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:id="@+id/txtMotorHondaDel"
                android:layout_height="wrap_content"
                android:layout_weight="0.67" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_13pxh"
                android:text="@{transactionVM.transactionModel.txtMotorHondaDel}"
                style="@style/txtRobotoregular14_2" tools:text="@string/msg_motor_honda_del"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt100000"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_54pxv"
                android:layout_marginStart="@dimen/_204pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.33" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{transactionVM.transactionModel.txt100000}"
                style="@style/txtRobotoregular14_1" tools:text="@string/lbl_100_000"/>
        </LinearLayout>
        <View android:background="@color/black_900_4c"
            android:id="@+id/lineVectorNine"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_106pxv" android:layout_width="@dimen/_354pxh"/>
        <LinearLayout android:id="@+id/linearRowtotalpayment"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTotalPayment"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.63" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{transactionVM.transactionModel.txtTotalPayment}"
                style="@style/txtRobotomedium14" tools:text="@string/lbl_total_payment"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt100000One"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_212pxh"
                android:layout_weight="0.37" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{transactionVM.transactionModel.txt100000One}"
                style="@style/txtPoppinsmedium14_3" tools:text="@string/lbl_100_000"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearTeing"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearTiud"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStyleamber_500_33cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCredit"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{transactionVM.transactionModel.txtCredit}"
                    style="@style/txtRobotoregular12_3" tools:text="@string/lbl_credit"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt100000Two"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_9pxh"
                    android:singleLine="true"
                    android:text="@{transactionVM.transactionModel.txt100000Two}"
                    style="@style/txtPoppinsbold18_1" tools:text="@string/lbl_100_000"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearTiud1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_140pxh"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStylegreen_A400_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBalance"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{transactionVM.transactionModel.txtBalance}"
                    style="@style/txtRobotoregular12_4" tools:text="@string/lbl_balance"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt843000"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_9pxh"
                    android:singleLine="true"
                    android:text="@{transactionVM.transactionModel.txt843000}"
                    style="@style/txtPoppinsbold18_1" tools:text="@string/lbl_843_000"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:id="@+id/txtDescription"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="wrap_content"
            android:text="@{transactionVM.transactionModel.txtDescription}"
            style="@style/txtRobotoregular14_2" tools:text="@string/msg_if_you_need_pri"/>
        <ImageView android:id="@+id/imageGroup"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_72pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="@dimen/_354pxh"
            android:scaleType="fitXY" android:src="@drawable/img_group"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txt265614813719328"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{transactionVM.transactionModel.txt265614813719328}"
            style="@style/txtRobotoregular18_1" tools:text="@string/msg_265614813719328"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnOk" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_ok" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_ok"/>
    </LinearLayout>
</layout>
